# vspyrun

./: .gitignore  README.md  pyproject.toml
example/bands/files/: input.vasp  slurm.job
example/bands/test/: INCAR  KPOINTS  slrum.job
example/relax/test/: INCAR  POSCAR  POTCAR
example/scf/test/: INCAR  KPOINTS  slrum.job
scripts/: prep_bs.py  prep_mir_sym.py  prep_pos.py  prep_relax.py  prep_scf.py  prep_solv.py  prep_vasp.py
src/vspyrun/: __init__.py  file.py  incar.py  kpoints.py  poscar.py  potcat.py  vale.py
