[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vspyrun"
version = "0.1.0"
description = "Small utilities for VASP (INCAR/KPOINTS/POSCAR/POTCAR helpers)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "ase"]

[tool.setuptools.packages.find]
where = ["src"]
